===== CHANGELOG =====
Zollern Galaxy v2.0.45
=====================

[NEW]
* Added Infected Valley biome to Maveth.
* 

[CHANGES]
* 
* 

[FIXES]
* Fixed Maveth having Eden stone in its lava lakes.
* 